--- a/templates/ecc/ecc_utv.yaml.j2
+++ b/templates/ecc/ecc_utv.yaml.j2
@@ -1,5 +1,5 @@
 azure:
-    subscription_id: {{subscription_id}}
+    subscription_id: 5a9e26a0-6897-44d6-963e-fae2a2061f27
 
 ecc:
     log: ecc.log
