--- a/templates/ecc/ecc_utv.yaml.j2
+++ b/templates/ecc/ecc_utv.yaml.j2
@@ -9,7 +9,7 @@ ecc:
     sleep: 30
     name_template: "ecc-node-{}"
 
-    image: GOLD CentOS 7
+    image: Ubuntu 20.04 LTS
     ansible_dir: {{infrastructure_playbook_root }}
     ansible_cmd: ./venv/bin/ansible-playbook -i /usr/local/bin/ecc_nodes.py ecc_live.yml
 
@@ -20,7 +20,33 @@ ecc:
     network_group: FOR-NEURO-SYSMED-UTV-NETWORK
     virtual_network: FOR-NEURO-SYSMED-UTV-VNET
     virtual_subnet:  WorkloadsSubnet
-    vm_size: Standard_D4as_v4
+#    vm_size: Standard_D4as_v4
     admin_username: {{ecc_user}}
     admin_password: {{ecc_user_password}}
     ssh_key: "{{ssh_key}}"
+    
+queues:
+  small:
+    vm_size: Standard_A1_v2
+    nodes_max: 2
+    nodes_min: 0
+    idle_time: 60
+    name_template: "ecc-small-{}"
+  medium:
+    vm_size: Standard_A2_v2
+    nodes_max: 4
+    nodes_min: 0
+    idle_time: 30
+    name_template: "ecc-medium-{}"
+  large:
+    vm_size: Standard_A2_v2
+    nodes_max: 2
+    nodes_min: 0
+    idle_time: 30
+    name_template: "ecc-large-{}"
+  huge:
+    vm_size: Standard_A2_v2
+    nodes_max: 2
+    nodes_min: 0
+    idle_time: 10
+    name_template: "ecc-huge-{}"     
