new version of ecc

--- a/templates/ecc/ecc_preprod.yaml.j2
+++ b/templates/ecc/ecc_preprod.yaml.j2
@@ -15,7 +15,7 @@ ecc:
     network_group: FOR-NEURO-SYSMED-PRE-PROD-NETWORK
     virtual_network: FOR-NEURO-SYSMED-PRE-PROD-VNET
     virtual_subnet: FOR-NEURO-SYSMED-PRE-PROD-SNET-Workload
-    #    vm_size: Standard_D2s_v4
+    vm_size: Standard_D2s_v4
     admin_username: {{ecc_user}}
     admin_password: {{ecc_user_password}}
     ssh_key: "{{ssh_key}}"
