--- a/templates/ecc/ecc_utv.yaml.j2
+++ b/templates/ecc/ecc_utv.yaml.j2
@@ -20,7 +20,7 @@ ecc:
     network_group: FOR-NEURO-SYSMED-UTV-NETWORK
     virtual_network: FOR-NEURO-SYSMED-UTV-VNET
     virtual_subnet:  WorkloadsSubnet
-#    vm_size: Standard_D4as_v4
+    vm_size: Standard_D2s_v4
     admin_username: {{ecc_user}}
     admin_password: {{ecc_user_password}}
     ssh_key: "{{ssh_key}}"
