--- a/templates/slurm/slurm.conf.j2
+++ b/templates/slurm/slurm.conf.j2
@@ -13,10 +13,14 @@ SlurmctldPort=6817
 SlurmdDebug=3
 #SlurmdLogFile=/var/log/slurm/slurmd.log
 SlurmdPort=6818
-#SlurmdSpoolDir=/var/spool/slurm/slurmd
+SlurmdSpoolDir=/var/spool/slurm/slurmd
 SlurmUser=slurm
-#StateSaveLocation=/var/lib/slurm/slurmctld
+StateSaveLocation=/var/lib/slurm/slurmctld
 TaskPlugin=task/cgroup
+
+
+NodeName=ecc-ubuntu  CoresPerSocket=1 CPUs=1 RealMemory=64000 Sockets=1  ThreadsPerCore=1  state=UNKNOWN
+
 
 # SMALL
 {% if small is defined %}
