--- a/templates/slurm/slurmdbd.conf.j2
+++ b/templates/slurm/slurmdbd.conf.j2
@@ -2,7 +2,7 @@ AuthType=auth/munge
 DbdAddr={{ groups['slurmhead'][0] }}
 DbdHost={{ groups['slurmhead'][0] }}
 SlurmUser=slurm
-StorageHost={{ groups['nsm-core'][0] }}
+StorageHost={{ groups['nsm_core'][0] }}
 StorageLoc=slurm_acct
 StorageUser=slurm
 StoragePass=slurm
