--- a/templates/slurm/slurm.conf.j2
+++ b/templates/slurm/slurm.conf.j2
@@ -19,7 +19,7 @@ StateSaveLocation=/var/lib/slurm/slurmctld
 TaskPlugin=task/cgroup
 
 
-NodeName=ecc-ubuntu  CoresPerSocket=1 CPUs=1 RealMemory=64000 Sockets=1  ThreadsPerCore=1  state=UNKNOWN
+NodeName=ecc-node-ubuntu  CoresPerSocket=1 CPUs=1 RealMemory=64000 Sockets=1  ThreadsPerCore=1  state=UNKNOWN
 
 
 # SMALL
