dedicated logfiles for slurm

--- a/templates/slurm/slurm.conf.j2
+++ b/templates/slurm/slurm.conf.j2
@@ -8,10 +8,10 @@ ProctrackType=proctrack/cgroup
 SchedulerType=sched/backfill
 SelectType=select/cons_res
 SelectTypeParameters=CR_Core_Memory
-#SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmctldPort=6817
 SlurmdDebug=3
-#SlurmdLogFile=/var/log/slurm/slurmd.log
+SlurmdLogFile=/var/log/slurm-llnl/slurmd.log
+SlurmctldLogFile=/var/log/slurm-llnl/slurmctld.log
 SlurmdPort=6818
 SlurmdSpoolDir=/var/spool/slurm/slurmd
 SlurmUser=slurm
