--- a/templates/slurm/slurmdbd.conf.j2
+++ b/templates/slurm/slurmdbd.conf.j2
@@ -8,3 +8,4 @@ StorageUser=slurm
 StoragePass=slurm
 StoragePort=3306
 StorageType=accounting_storage/mysql
+LogFile=/var/log/slurm-llnl/slurmdbd.log
