updated ansible playbook to use

--- a/templates/ecc/ecc_utv.yaml.j2
+++ b/templates/ecc/ecc_utv.yaml.j2
@@ -11,7 +11,7 @@ ecc:
 
     image: Ubuntu 20.04 LTS
     ansible_dir: {{infrastructure_playbook_root }}
-    ansible_cmd: ./venv/bin/ansible-playbook -i /usr/local/bin/ecc_nodes.py ecc_live.yml
+    ansible_cmd: ./venv/bin/ansible-playbook -i /usr/local/bin/ecc_nodes.py slurm_update_config.yml
 
 
 
