--- a/templates/autofs/scratch.autofs.j2
+++ b/templates/autofs/scratch.autofs.j2
@@ -1,3 +1,3 @@
 {% for item in storage  %}
-/scratch/{{group_name}} /etc/auto.scratch --timeout=180
+/scratch/ /etc/auto.scratch --timeout=180
 {% endfor %}
